@@ -555,7 +555,7 @@
         </listitem>
       </orderedlist>
 
-      <para>To reset the terminal title to its default behaviour, perform the same three steps
+      <para>To reset the terminal title to its default behavior, perform the same three steps
       as described above, but enter an empty title.</para>
     </sect2>
 
@@ -794,7 +794,7 @@
                 file.</para>
                 <para>Use the <guilabel>Style</guilabel> option to control the appearance
                 of the background image. &application; supports tiling, centering, scaling and
-                strechting background images.</para>
+                stretching background images.</para>
               </listitem>
               <listitem>
                 <guilabel>Transparent background</guilabel>
@@ -1066,8 +1066,8 @@
       Next in the menu is a list of default applications - automatically detected on your system
       - you can choose from. Choose <guimenuitem>Other...</guimenuitem> in case your preferred
       application does not show up in the list of default applications or if you want to use
-      specific flags to launch an application. (Use <parameter>%u</parameter> to represent the
-      URL when executed, e.g. <command>browser --newtab %u</command>.) This will bring up a
+      specific flags to launch an application (Use <parameter>%u</parameter> to represent the
+      URL when executed, e.g. <command>browser --newtab %u</command>). This will bring up a
       dialog that lets you enter a custom application.
     </para>
 
@@ -1351,7 +1351,7 @@
               A set of preference ordered base directories relative to which
               data files should be searched in addition to the
               <varname>${XDG_DATA_HOME}</varname> base directory. The directories
-              should be separated with a color.
+              should be separated with a colon.
             </para>
           </listitem>
         </varlistentry>
@@ -1397,7 +1397,7 @@
       <para>
         &application; offers a few hidden options to allow powerusers to control various advanced settings and
         to reduce the number of options in the user interface. To set any of these options, you will have
-        to open the file <filename>${XDG_CONFIG_HOME}/Terminal/terminalrc</filename> in your favourite
+        to open the file <filename>${XDG_CONFIG_HOME}/Terminal/terminalrc</filename> in your favorite
         text editor and edit the section <varname>[Configuration]</varname>; simply create the file if
         it does not already exist. For example, your <filename>terminalrc</filename> could look like
       </para>
@@ -1459,7 +1459,7 @@ MiscTabCloseButtons=TRUE</programlisting>
               <literal>TRUE</literal> or <literal>FALSE</literal>.
             </para>
             <para>
-              This behaviour is disabled by default, because it tends to confuse users.
+              This behavior is disabled by default, because it tends to confuse users.
             </para>
           </listitem>
         </varlistentry>
@@ -1586,7 +1586,7 @@ $ cp /usr/local/share/Terminal/Terminal.ui .</screen>
 
     <para>
       This documentation was written by Benedikt Meurer (<email>benny@xfce.org</email>) and
-      Andrew Conkling (<email>andrewski@fr.st</email>). The lastest version of this document
+      Andrew Conkling (<email>andrewski@fr.st</email>). The latest version of this document
       is always available from the <ulink type="http"
       url="http://terminal.os-cillation.com/">Terminal website</ulink>.
     </para>
