@@ -52,7 +52,7 @@ usage (void)
                      "                                      inside the terminal"));
   g_print ("%s\n", _("  --working-directory=DIRNAME         Set the terminals working directory"));
   g_print ("%s\n", _("  -T, --title=TITLE                   Set the terminals title"));
-  g_print ("%s\n", _("  -H, --hold                          Do not immediatly destroy the tab\n"
+  g_print ("%s\n", _("  -H, --hold                          Do not immediately destroy the tab\n"
                      "                                      when the child command exits"));
   g_print ("\n");
   g_print ("%s\n", _("  --display=DISPLAY                   X display to use for the last-\n"
