@@ -1,3 +1,8 @@
+2006-02-10	Benedikt Meurer <benny@xfce.org>
+
+	* doc/C/Terminal.xml.in, terminal/main.c: Apply Diachi's 2nd typo
+	  correction patch. Bug #1443.
+
 2006-02-09	Benedikt Meurer <benny@xfce.org>
 
 	* doc/C/Terminal.xml.in: Apply Daichi's documentation patch to fix
